--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -41,7 +41,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: kkp-dfs/dime-github-actions-workflows/common@revise-pr
+    - uses: kkp-dfs/dime-github-actions-workflows/common@main
       with:
         gh_access_token: ${{ inputs.gh_access_token }}
     - name: Checkout Dime helm repository
