--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -41,7 +41,8 @@ jobs:
       ecr_username: ${{ steps.ecr.outputs.username }}
       ecr_password: ${{ steps.ecr.outputs.password }}
     steps:
-      - uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
+      - name: Setup flutter
+        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
           language: flutter
           repository: ${{ inputs.repository }}
@@ -60,7 +61,8 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
+      - name: Setup flutter
+        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
           language: flutter
           repository: ${{ inputs.repository }}
@@ -89,7 +91,8 @@ jobs:
       volumes:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
-      - uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
+      - name: Setup flutter
+        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
           language: flutter
           repository: ${{ inputs.repository }}
@@ -114,7 +117,8 @@ jobs:
 
           envsubst < environment_secret_template.yaml > environment_secret.yaml
           make gen-config-sit
-      - uses: kkp-dfs/dime-github-actions-workflows/unit-test@main
+      - name: Run unit tests
+        uses: kkp-dfs/dime-github-actions-workflows/unit-test@main
         with:
           language: flutter
           minimum_coverage: 80
