--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -67,6 +67,7 @@ runs:
         helm upgrade -i ${{ inputs.release_name }} dime-helm/charts/dime-application \
         -f dime-helm/values/${{ inputs.application_name }}/values.yaml \
         -f dime-helm/values/${{ inputs.application_name }}/values-${{ inputs.environment }}.yaml \
+        --set "project.name=${{ inputs.environment }}" \
         --set "fullnameOverride=${{ inputs.application_name }}" \
         --set "nameOverride=${{ inputs.application_name }}" \
         --set "source.username=${{ inputs.gh_access_token }}" \
