--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -43,8 +43,8 @@ runs:
       if: ${{ inputs.language == 'flutter' }}
       shell: bash
       run: |
-        flutter test -j 8 --coverage test
-        make lcov-remove-coverage
+        flutter test -j 8
+      #  make lcov-remove-coverage
 
     - id: fail_message
       if: ${{ failure() }}
