--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -372,6 +372,7 @@ jobs:
       - name: Migrate database
         uses: kkp-dfs/dime-github-actions-workflows/db-migration@main
         with:
+          environment: ${{ matrix.environment }}
           application_name: ${{ inputs.application_name }}
           directory: ${{ inputs.migrate_dir }}
           schema: ${{ inputs.migrate_schema }}
