project name per environment

--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -64,10 +64,10 @@ runs:
     - name: Deply by helm
       shell: bash
       run: |
-        helm upgrade -i ${{ inputs.namespace }}-${{ inputs.environment }} dime-helm/charts/dime-application \
+        helm upgrade -i ${{ inputs.application_name }}-${{ inputs.environment }} dime-helm/charts/dime-application \
         -f dime-helm/values/${{ inputs.application_name }}/values.yaml \
         -f dime-helm/values/${{ inputs.application_name }}/values-${{ inputs.environment }}.yaml \
-        --set "project.name=${{ inputs.namespace }}-${{ inputs.environment }}" \
+        --set "project.name=${{ inputs.application_name }}-${{ inputs.environment }}" \
         --set "fullnameOverride=${{ inputs.application_name }}" \
         --set "nameOverride=${{ inputs.application_name }}" \
         --set "source.username=${{ inputs.gh_access_token }}" \
