--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -64,6 +64,8 @@ runs:
     - name: Deply by helm
       shell: bash
       run: |
+        ENDPOINTS=$(echo ${{ inputs.endpoint }} | sed -e 's/sit/${{ matrix.environment }}/g')
+
         helm upgrade -i ${{ inputs.application_name }}-${{ inputs.environment }} dime-helm/charts/dime-application \
         -f dime-helm/values/${{ inputs.application_name }}/values.yaml \
         -f dime-helm/values/${{ inputs.application_name }}/values-${{ inputs.environment }}.yaml \
@@ -74,7 +76,7 @@ runs:
         --set "source.password=x-oauth-basic" \
         --set "destination.cluster=dime-${{ inputs.environment }}" \
         --set "destination.namespace=${{ inputs.namespace }}" \
-        --set "application.values.virtualService.hosts={${{ inputs.endpoint }}}" \
+        --set "application.values.virtualService.hosts={$ENDPOINTS}" \
         --set "application.values.image.repository=${{ inputs.image_repo }}" \
         --set "application.values.image.tag=${{ inputs.image_tag }}"
 
