--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -150,6 +150,7 @@ jobs:
     name: Run lint
     needs: setup
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Setup ${{ inputs.code_lang }}
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
@@ -185,6 +186,7 @@ jobs:
     if: ${{ inputs.code_lang == 'golang' }}
     needs: setup
     runs-on: [self-hosted, linux, main]
+    continue-on-error: true
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
       credentials:
