revise go cache

--- a/lang-setup/action.yml
+++ b/lang-setup/action.yml
@@ -52,7 +52,7 @@ runs:
       uses: actions/cache@v2
       with:
         path: |
-          $HOME/go/pkg/mod/cache
+          $HOME/go/pkg/mod
           $HOME/go/bin
           ./vendor
         key: ${{ runner.os }}-${{ inputs.language }}-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
