--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -41,6 +41,7 @@ jobs:
       ecr_username: ${{ steps.ecr.outputs.username }}
       ecr_password: ${{ steps.ecr.outputs.password }}
     steps:
+      - uses: AutoModality/action-clean@v1
       - name: Setup flutter
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
@@ -63,6 +64,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
+      - uses: AutoModality/action-clean@v1
       - name: Setup flutter
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
@@ -93,6 +95,7 @@ jobs:
       volumes:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
+      - uses: AutoModality/action-clean@v1
       - name: Setup flutter
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
