fix release name

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -346,7 +346,7 @@ jobs:
         uses: kkp-dfs/dime-github-actions-workflows/deploy-app@main
         with:
           environment: ${{ matrix.environment }}
-          release_name: ${{ inputs.application_name }}-${{ needs.setup.outputs.ref }}
+          release_name: ${{ inputs.application_name }}-${{ needs.environment }}
           helm_ref: ${{ inputs.helm_ref }}
           namespace: ${{ inputs.namespace }}
           application_name: ${{ inputs.application_name }}
