--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -76,7 +76,7 @@ runs:
         curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"configure\":\".*\",\"write\":\".*\",\"read\":\".*\"}" http://${RMQ_HOST}:15672/api/permissions/${RMQ_VHOST}/${RMQ_USER}
 
         REDIS=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/redis/sit)
-        REDIS_HOST: redis-master.shared.svc.cluster.local
+        REDIS_HOST=redis-master.shared.svc.cluster.local
         REDIS_PORT=6379
         REDIS_ADMIN_PASS=$(echo $REDIS | jq -r '.data.data.admin_password')
         echo "::set-output name=redis_host::${REDIS_HOST}"
