--- a/checkout/action.yml
+++ b/checkout/action.yml
@@ -26,6 +26,7 @@ runs:
         clean: true
 
     - shell: bash
+      if: ${{ inputs.base_ref != inputs.target_ref }}
       run: |
         git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
         git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
