--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -40,18 +40,19 @@ runs:
       with:
         images: ${{ inputs.image || inputs.repository }}
         tags: |
+          type=semver,pattern={{version}}
           type=ref,event=pr,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
           type=ref,event=pr,suffix=-latest
           type=ref,event=branch,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
           type=ref,event=branch
 
-    - name: Build & push docker images
-      uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
-      with:
-        image: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        build_args: ${{ inputs.build_args }}
-        token: ${{ inputs.token }}
+    # - name: Build & push docker images
+    #   uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
+    #   with:
+    #     image: ${{ steps.meta.outputs.tags }}
+    #     labels: ${{ steps.meta.outputs.labels }}
+    #     build_args: ${{ inputs.build_args }}
+    #     token: ${{ inputs.token }}
 
     - id: image
       shell: bash
