--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -44,7 +44,7 @@ runs:
           type=ref,event=pr,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
           type=ref,event=pr,suffix=-latest
           type=ref,event=branch,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
-          type=ref,event=branch
+          type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
 
     # - name: Build & push docker images
     #   uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
