--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -45,7 +45,9 @@ runs:
           type=ref,event=pr,suffix=-latest
           type=ref,event=branch,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
           type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
-
+    - name: mask token
+      shell: bash
+      run: echo "::add-mask::${{ inputs.token }}"
     - name: Build & push docker images
       uses: kkp-dfs/dime-github-actions-workflows/kaniko@main
       with:
