--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -51,6 +51,7 @@ runs:
         cd dime-helm
         git fetch
         git reset ${{ inputs.helm_ref }} --hard
+        git checkout revise-corporate-web
     - name: Setup kubernetes context
       shell: bash
       env:
