--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -280,13 +280,22 @@ jobs:
           gh_access_token: ${{ secrets.gh_access_token }}
           target: ${{ (inputs.repository == 'kkp-dfs/dime-corporate-web' && 'source') || '' }}
 
+  debug:
+    runs-on: [self-hosted, linux, deployment, main]
+    needs:
+      - setup
+      - build
+    if: ${{ always() }}
+    steps:
+      - run: echo ${{ needs.build.result == 'success' && needs.setup.outputs.ref != 'main' }}
+
   deploy_pr:
-    name: Apply argo application to kubernetes cluster
+    name: Deploy application from pull-request
     needs:
       - setup
       - build
     runs-on: [self-hosted, linux, deployment, main]
-    if: ${{ needs.setup.outputs.ref != 'main' && needs.build.result == 'success' }}
+    if: ${{ needs.build.result == 'success' && needs.setup.outputs.ref != 'main' }}
     timeout-minutes: 3
     environment:
       name: ${{ needs.setup.outputs.ref }}
@@ -315,12 +324,12 @@ jobs:
           gh_access_token: ${{ secrets.gh_access_token }}
 
   deploy:
-    name: Apply argo application to kubernetes cluster
+    name: Deploy applicaton from main branch
     needs:
       - setup
       - build
     runs-on: [self-hosted, linux, deployment, main]
-    if: ${{ (needs.setup.outputs.ref == 'main') && ((inputs.code_lang == 'golang' && success()) || (inputs.code_lang == 'node' && needs.lint.result == 'success')) }}
+    if: ${{ needs.build.result == 'success' && needs.setup.outputs.ref == 'main' }}
     timeout-minutes: 3
     strategy:
       matrix:
