fix job condition

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -295,7 +295,7 @@ jobs:
       - setup
       - build
     runs-on: [self-hosted, linux, deployment, main]
-    if: ${{ needs.build.result == 'success' && needs.setup.outputs.ref != 'main' }}
+    if: ${{ always() && needs.build.result == 'success' && needs.setup.outputs.ref != 'main' }}
     timeout-minutes: 3
     environment:
       name: ${{ needs.setup.outputs.ref }}
@@ -329,7 +329,7 @@ jobs:
       - setup
       - build
     runs-on: [self-hosted, linux, deployment, main]
-    if: ${{ needs.build.result == 'success' && needs.setup.outputs.ref == 'main' }}
+    if: ${{ always() && needs.build.result == 'success' && needs.setup.outputs.ref == 'main' }}
     timeout-minutes: 3
     strategy:
       matrix:
