--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -253,7 +253,7 @@ jobs:
       - unit-test
       - integration-test
     runs-on: [self-hosted, linux,  main]
-    if: ${{ (inputs.code_lang == 'golang' && success()) || (inputs.code_lang == 'node' && needs.lint.result == 'success') }}
+    if: ${{ (inputs.code_lang == 'node' && needs.lint.result == 'success') || success() }}
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
       credentials:
@@ -279,15 +279,6 @@ jobs:
           token: ${{ needs.setup.outputs.ecr_token }}
           gh_access_token: ${{ secrets.gh_access_token }}
           target: ${{ (inputs.repository == 'kkp-dfs/dime-corporate-web' && 'source') || '' }}
-
-  debug:
-    runs-on: [self-hosted, linux, deployment, main]
-    needs:
-      - setup
-      - build
-    if: ${{ always() }}
-    steps:
-      - run: echo ${{ needs.build.result == 'success' && needs.setup.outputs.ref != 'main' }}
 
   deploy_pr:
     name: Deploy application from pull-request
@@ -366,7 +357,7 @@ jobs:
       - setup
       - build
     runs-on: [self-hosted, linux, deployment, main]
-    if: ${{ inputs.migration && ((inputs.code_lang == 'golang' && success()) || (inputs.code_lang == 'node' && needs.lint.result == 'success')) }}
+    if: ${{ inputs.migration && ((inputs.code_lang == 'node' && needs.lint.result == 'success') || success()) }}
     strategy:
       matrix:
         environment: ["sit", "uat"]
