--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -68,9 +68,9 @@ runs:
         ENDPOINTS=$(echo ${{ inputs.endpoint }} | sed -e 's/sit/${{ inputs.environment }}/g')
 
         if [ "${{ inputs.application_name }}" = "corporate-web" ]; then
-          export IMAGE_SETS="--set 'application.values.initContainers[0].image=${{ inputs.image_repo }}:${{ inputs.image_tag }}'"
+          export IMAGE_SETS='--set application.values.initContainers[0].image=${{ inputs.image_repo }}:${{ inputs.image_tag }}'
         else
-          export IMAGE_SETS="--set 'application.values.image.repository=${{ inputs.image_repo }}' --set 'application.values.image.tag=${{ inputs.image_tag }}'"
+          export IMAGE_SETS='--set application.values.image.repository=${{ inputs.image_repo }} --set application.values.image.tag=${{ inputs.image_tag }}'
         fi
 
         helm upgrade -i ${{ inputs.release_name }} dime-helm/charts/dime-application \
@@ -82,6 +82,7 @@ runs:
         --set "source.password=x-oauth-basic" \
         --set "destination.cluster=dime-${{ inputs.environment }}" \
         --set "destination.namespace=${{ inputs.namespace }}" \
+        --set "application.version=revise-corporate-web" \
         --set "application.values.virtualService.hosts={$ENDPOINTS}" \
         $IMAGE_SETS
 
