--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -47,7 +47,9 @@ runs:
           type=ref,event=pr,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
           type=ref,event=pr,suffix=-latest
           type=ref,event=branch,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
+          type=ref,event=branch,suffix=-{{sha}}
           type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
+          type=raw,value={{sha}},enable=true
     - name: mask token
       shell: bash
       run: echo "::add-mask::${{ inputs.token }}"
